# poke-robot

./: .gitignore  LICENSE  README.md  index.html  log.html  output.xml  pyproject.toml  report.html  requirements.txt
.github/workflows/: robot-tests.yml
data/: pokemon_lookup.csv
export/: influxDbData.txt
libraries/: pokemon_library.py  type_library.py
resources/keywords/: ability_keywords.resource  common.resource  pokemon_keywords.resource  type_keywords.resource
resources/variables/: api_variables.resource
schemas/: pokemon.schema.json  pokemon_ability.schema.json  pokemon_type.schema.json
tests/: README.md
tests/cross-endpoint/: cross-endpoint.robot
tests/pokemon/: pokemon_lookup.robot  pokemon_type.robot
tests/reliability/: reliability.robot
tests/schema/: schema_validation.robot
tests/types/: type_relationship.robot
