[project]
name = "poke-robot"
version = "0.1.0"
description = "Testing the Pokemon API with Robot Framework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
    "robotframework>=7.4.2",
    "robotframework-csvlibrary>=0.0.5",
    "robotframework-jsonlibrary>=0.5",
    "robotframework-requests>=0.9.7",
    "robotframework-robocop>=8.2.8",
]
